# rustdesk

./: .gitmodules  Cargo.toml  get_id.bat  run.bat  set_password.bat
.claude/: settings.local.json
.github/workflows/: build-windows-custom.yml  flutter-ci.yml
flutter/lib/models/: server_model.dart
libs/clipboard/: Cargo.toml
libs/enigo/: Cargo.toml
libs/libxdo-sys-stub/: Cargo.toml
libs/remote_printer/: Cargo.toml
libs/scrap/: Cargo.toml
libs/virtual_display/: Cargo.toml
libs/virtual_display/dylib/: Cargo.toml
src/: core_main.rs  ipc.rs  rendezvous_mediator.rs  server.rs  tray.rs  ui_cm_interface.rs  ui_interface.rs
src/client/: io_loop.rs
src/platform/: windows.rs
src/server/: connection.rs  video_service.rs
