[package]
name = "remote_printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
hbb_common = { git = "https://github.com/merakiinc/hbb_common" }
winapi = { version = "0.3" }
windows-strings = "0.3.1"
